# opencore-aacdec

./: ProjectHome.md  configure.ac
sample/: decoder_aac.c  wav.c  wav.h
src/: calc_auto_corr.c  calc_sbr_synfilterbank.c  fxp_mul32_arm_gcc.h  pvmp4audiodecoderinitlibrary.c  pvmp4setaudioconfig.c  s_mc_info.h  sbr_generate_high_freq.c  trans4m_freq_2_time_fxp.c
trunk/: configure.ac
trunk/sample/: Makefile.am  decoder_aac.c  wav.c  wav.h
trunk/src/: calc_sbr_envelope.c  calc_sbr_synfilterbank.h  esc_iquant_scaling.c  fxp_mul32_arm_v4.h  fxp_mul32_arm_v4_gcc.h  fxp_mul32_arm_v5.h  fxp_mul32_c_equivalent.h  fxp_mul32_c_msc_evc.h  fxp_mul32_c_msc_evc_armv5.h  get_adif_header.c  get_audio_specific_config.c  pv_normalize.h  pvmp4audiodecoderconfig.c  pvmp4audiodecoderframe.c  pvmp4audiodecoderresetbuffer.c  s_tdec_int_file.h  sbr_open.c  unpack_idx.c
